--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -92,13 +92,7 @@
   }
 
   .main-nav--opened-simple .main-nav__button {
-    position: absolute;
-    top: 240px;
-    left: 277px;
-    width: 25px;
-    height: 22px;
-    background-image: url("../img/icon-menu.svg");
-    background-repeat: no-repeat;
+    display: none;
   }
 
   .main-nav--closed .main-nav__item {
