--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -1,7 +1,7 @@
 .logo {
   position: absolute;
 
-  top: 224px;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
 
@@ -13,6 +13,11 @@
 
 .main-nav--closed .logo {
   top: 0;
+}
+
+.main-nav--opened .logo,
+.main-nav--opened-simple .logo {
+  top: 224px;
 }
 
 @media (min-width: @tablet-width) {
