--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -21,7 +21,8 @@
 }
 
 @media (min-width: @tablet-width) {
-  .logo {
+  .logo,
+  .main-nav--opened-simple .logo {
     top: 0;
     height: 93px;
   }
