--- a/source/less/blocks/commercial.less
+++ b/source/less/blocks/commercial.less
@@ -97,6 +97,11 @@
   z-index: 1;
 }
 
+.commercial__video-block {
+  display: flex;
+  flex-direction: column;
+}
+
 .commercial__video {
   display: block;
   height: 200px;
@@ -108,7 +113,7 @@
 .commercial__scrolling {
   position: absolute;
 
-  top: 349px;
+  top: 350px;
   left: 20px;
 
   width: 280px;
@@ -240,6 +245,12 @@
   }
 
   .commercial__scrolling {
+    position: absolute;
+
+    width: 280px;
+    height: 45px;
+    background-color: rgba(56, 57, 32, 0.6);
+
     left: 60px;
     top: 618px;
 
