--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -321,7 +321,6 @@
     margin: 0;
     padding: 0;
     width: @tablet-content-width;
-    border-top: @border;
   }
 
   .form__group--attractions {
@@ -356,10 +355,51 @@
     text-align: left;
   }
 
+  .form__wrapper--contacts {
+    border-top: @border;
+    position: relative;
+    padding-top: 37px;
+    margin-top: 13px;
+    box-sizing: border-box;
+  }
+
+  .form__wrapper--attractions {
+    border-top: @border;
+    position: relative;
+    padding-top: 23px;
+    margin-top: 25px;
+  }
+
+  .form__group--contacts .form__group-heading {
+    position: absolute;
+    top: -13px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    display: block;
+    width: 400px;
+    height: 40px;
+    background-color: #ffffff;
+    text-align: center;
+    border: 0;
+  }
+
+  .form__group--attractions .form__group-heading {
+    position: absolute;
+    top: -27px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    display: block;
+    width: 400px;
+    height: 40px;
+    background-color: #ffffff;
+    text-align: center;
+    border: 0;
+  }
+
   .form__group--contacts .form__group-heading,
   .form__group--attractions .form__group-heading {
-    text-align: center;
-    width: 400px;
     padding-right: 57px;
     padding-left: 56px;
   }
@@ -545,20 +585,34 @@
 
   .form__group--name,
   .form__group--impression {
-    width: 479px;
+    width: 478px;
   }
 
   .form__group--name {
     padding-left: 80px;
   }
 
+  .form__group--contacts,
+  .form__group--attractions {
+    width: 960px;
+  }
+
   .form__group--attractions .form__group-wrapper {
     margin-bottom: 0;
   }
 
+  .form__wrapper--contacts {
+    padding-top: 85px;
+    margin-top: 9px;
+  }
+
+  .form__wrapper--attractions {
+    padding-top: 23px;
+    margin-top: 29px;
+  }
 
   .form__group--contacts .form__group-heading {
-    margin-bottom: 73px;
+    top: -15px;
   }
 
   .form__group--impression .form__group-heading {
@@ -580,7 +634,7 @@
   .form__inner .form__group-heading {
     position: absolute;
     top: 1422px;
-    left: 50.8%;
+    left: 50%;
     transform: translateX(-50%);
 
     display: block;
@@ -621,10 +675,8 @@
 
   .form__title-phone,
   .form__title-email {
-    margin: 0;
-    margin-right: 18px;
     padding-top: 18px;
-    padding-bottom: 15px;
+    margin: 0;
   }
 
   .form__title-phone::after {
@@ -724,21 +776,35 @@
   }
 
   .form__field {
-    width: 315px;
     box-sizing: border-box;
+  }
+
+  .form__field-name {
+    width: 350px;
+    box-sizing: border-box;
+  }
+
+  .form__field-sername {
+    width: 312px;
+  }
+
+  .form__field-patronym {
+    width: 315px;
   }
 
   .form__field-phone {
     padding-top: 17px;
     padding-bottom: 16px;
-    width: 315px;
+    width: 300px;
+    margin-left: 18px;
   }
 
   .form__field-email {
     padding-top: 17px;
     padding-bottom: 16px;
     margin-bottom: 0;
-    width: 315px;
+    width: 300px;
+    margin-left: 18px;
   }
 
 
