--- a/source/less/blocks/promo-photo.less
+++ b/source/less/blocks/promo-photo.less
@@ -72,8 +72,17 @@
   }
 
   .promo-photo__like {
+    margin-top: 15px;
     width: 86px;
     box-sizing: border-box;
+  }
+
+  .promo-photo__like-number {
+    margin-left: 34px;
+  }
+
+  .promo-photo__like-icon {
+    top: -2px;
   }
 }
 
@@ -90,6 +99,10 @@
   .promo-photo__like {
     width: 85px;
     color: #ffffff;
+  }
+
+  .promo-photo__like-number {
+    margin-bottom: 30px;
   }
 
   .promo-photo__like-icon {
