--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -148,16 +148,14 @@
   font-size: @placeholder-font-size;
   line-height: @placeholder-line-height;
   font-weight: 700;
+  color: @text-dark;
 
   margin: 0;
   padding: 14px 20px;
-
   border: 0;
   outline: none;
   background-color: @semi-dark;
-
   display: block;
-
   .form__field()
 }
 
