--- a/source/less/global.less
+++ b/source/less/global.less
@@ -29,6 +29,7 @@ body {
 
   background-position: top center;
   position: relative;
+  overflow-x: hidden;
 }
 
 .visually-hidden:not(:focus):not(:active) {
