--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -5,6 +5,11 @@
 
   &::-moz-placeholder {
     color: @text-dark;
+    opacity: 1;
+  }
+
+  &:-moz-placeholder {
+    color: @text-dark;
   }
 
   &::-webkit-input-placeholder {
