--- a/source/less/blocks/commercial.less
+++ b/source/less/blocks/commercial.less
@@ -64,7 +64,7 @@
   background-size: cover;
   background-color: #f3f1ed;
   height: 350px;
-
+  border: 0;
   position: relative;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
