--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -90,9 +90,18 @@
 }
 
 @media (min-width: @desktop-width) {
+  .page-intro {
+    width: 498px;
+  }
+
   .page-intro--inner {
     padding-top: 93px;
     padding-bottom: 45px;
+  }
+
+  .page-intro--inner .page-intro__title {
+    margin-bottom: 32px;
+    margin-top: 17px;
   }
 
   .photo .page-intro--inner {
