--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -9,7 +9,7 @@
 .copyright__content {
   line-height: @title-line-height;
   display: block;
-  margin-right: 40px;
+  margin-left: 5px;
   color: #000000;
 }
 
@@ -36,5 +36,9 @@
 
   .copyright__icon svg {
     left: 111px;
+  }
+
+  .copyright__content {
+    margin-left: 0;
   }
 }
