--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -12,3 +12,16 @@
   background-color: @text-info;
   border: none;
 }
+
+.button:hover {
+  background-color: @darker-info;
+}
+
+.button:active {
+  color: @text-dark-info;
+  background-color: @darkest-info;
+}
+
+.button:disabled {
+  background-color: #e5e5e5;
+}
