--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -27,6 +27,14 @@
   height: 34px;
 }
 
+.copyright__icon svg:hover {
+  fill: @text-info;
+}
+
+.copyright__icon svg:active {
+  fill: #b2b2b2;
+}
+
 @media (min-width: @tablet-width) {
   .copyright {
     margin: 0;
