--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,5 +1,11 @@
 @text-info: #81b3d2;
 
+@text-dark-info: #88b6d1;
+
+@darker-info: #669ec0;
+
+@darkest-info: #5496bd;
+
 @text-secondary: #eeeeee;
 
 @text-light: #ffffff;
